Fixed dashboard layout bug, rearranged file dialog inputs

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -14,6 +14,7 @@ textarea {
 
 dialog {
   background-color: var(--gray-100);
+  form,
   .top,
   .buttons {
     background-color: inherit;
